[tool.poetry]
name = "ogdf-python"
version = "0.1.0-dev"
description = "Automagic Python Bindings for the Open Graph Drawing Framework written in C++"
authors = ["Simon D. Fink <finksim@fim.uni-passau.de>"]
license = "Apache-2.0"
readme = "README.rst"
homepage = "https://ogdf.github.io"
repository = "https://github.com/N-Coder/ogdf-python"
documentation = "https://ogdf-python.readthedocs.io"
keywords = ["ogdf", "graph", "network", "drawing", "algorithm"]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: Unix',
    'Programming Language :: C++',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python',
    'Topic :: Scientific/Engineering :: Information Analysis',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Topic :: Scientific/Engineering :: Visualization',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

[tool.poetry.dependencies]
python = "^3.6"
cppyy =  "^1.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
