[project]
name = "ogdf-python"
version = "0.2.1"
description = "Automagic Python Bindings for the Open Graph Drawing Framework written in C++"
authors = [
  { name = "Simon D. Fink", email = "finksim@fim.uni-passau.de" },
]
requires-python = ">=3.7"
license = "Apache-2.0"
readme = "README.rst"
homepage = "https://ogdf.github.io"
repository = "https://github.com/N-Coder/ogdf-python"
documentation = "https://ogdf-python.readthedocs.io"
keywords = ["ogdf", "graph", "network", "drawing", "algorithm"]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: Unix',
    'Programming Language :: C++',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python',
    'Topic :: Scientific/Engineering :: Information Analysis',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Topic :: Scientific/Engineering :: Visualization',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

dependencies = [
    "cppyy>=2,<3",
    "importlib-resources>=1",
]

[project.optional-dependencies]
quickstart = [
    "jupyterlab",
    "ipympl",
    "matplotlib",
    "ogdf-wheel",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
