[project]
name = "ogdf-python"
version = "0.3.4"
description = "Automagic Python Bindings for the Open Graph Drawing Framework written in C++"
authors = [
  { name = "Simon D. Fink", email = "finksim@fim.uni-passau.de" },
]
requires-python = ">=3.7"
license = "Apache-2.0"
readme = "README.rst"
homepage = "https://ogdf.github.io"
repository = "https://github.com/N-Coder/ogdf-python"
documentation = "https://ogdf-python.readthedocs.io"
keywords = ["ogdf", "graph", "network", "drawing", "algorithm"]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: Unix',
    'Programming Language :: C++',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python',
    'Topic :: Scientific/Engineering :: Information Analysis',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Topic :: Scientific/Engineering :: Visualization',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

dependencies = [
    "cppyy",
    "importlib-resources>=1",
]

[project.optional-dependencies]
quickstart = [
    "jupyterlab",
    "ipympl",
    "matplotlib",
    "ogdf-wheel",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.bumpversion]
current_version = "0.3.4"
commit = "True"
tag = "True"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)-?(?P<release>dev)?"
serialize = [
	"{major}.{minor}.{patch}-{release}",
	"{major}.{minor}.{patch}"
]

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "src/ogdf_python/__init__.py"

[[tool.bumpversion.files]]
filename = "README.rst"

[tool.bumpversion.parts.release]
values = [
	"dev",
	"release"
]
optional_value = "release"
